[package]
name = "rustwlc"
description = "wlc Wayland library bindings for Rust"
version = "0.3.1"
repository = "https://github.com/Immington-Industries/rust-wlc/"
keywords = ["wlc", "Wayland", "compositor", "bindings"]
readme = "README.md"
license = "MIT"
authors = ["Snirk Immington <snirk.immington@gmail.com>", "Timidger <apragmaticplace@gmail.com>"]
build = "build.rs"

[dependencies]
libc = "0.2.8"
bitflags = "0.4.0"
