[package]
name = "rustwlc"
description = "wlc Wayland library bindings for Rust"
version = "0.4.0"
repository = "https://github.com/Immington-Industries/rust-wlc/"
keywords = ["wlc", "Wayland", "compositor", "bindings"]
readme = "README.md"
license = "MIT"
authors = ["Snirk Immington <snirk.immington@gmail.com>", "Timidger <apragmaticplace@gmail.com>"]

[dependencies]
libc = "0.2.*"
bitflags = "0.7.*"

[dev-dependencies]
lazy_static = "0.2.*"
