[package]
name = "rustwlc"
description = "wlc Wayland library bindings for Rust"
version = "0.7.0"
repository = "https://github.com/Immington-Industries/rust-wlc/"
keywords = ["wlc", "Wayland", "compositor", "bindings"]
readme = "README.md"
license = "MIT"
authors = ["Snirk Immington <snirk.immington@gmail.com>", "Timidger <apragmaticplace@gmail.com>"]
build = "build.rs"

[features]
wlc-wayland = ["wayland-sys"]
static-wlc = []
dummy = []

[dependencies]
libc = "0.2"
bitflags = "0.7"
wayland-sys = { version = "^0.6.0", optional = true, features = ["server"] }

[dev-dependencies]
lazy_static = "0.2"
